Remove CORBA tests from exclude list, get more tests running